--- a/homeserver/package.json
+++ b/homeserver/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mqtt": "^4.2.8",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "ws": "^8.2.3"
   }
 }
