--- a/homeserver/package.json
+++ b/homeserver/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "sequelize":"6.12.0-beta.1",
+    "sequelize-cli":"6.3.0",
+    "sqlite3":"5.0.2",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mqtt": "^4.2.8",
     "nodemon": "^2.0.14",
-    "ws": "^8.2.3"
+    "ws": "^8.2.3",
+    "uuid":"8.3.2"
   }
 }
